# base_chat

./: .gitignore  LICENSE  README.md  shell.nix
websocket-chat/client/: .env.dev  Cargo.toml
websocket-chat/client/src/: main.rs
websocket-chat/server/: .env.dev  Cargo.toml
websocket-chat/server/src/: main.rs
