[package]
name = "websocket-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-std = "1.9.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.17"
dotenv = "0.15.0"
